--- a/JavaScript Algorithms and Data Structures/Build a Palindrome Checker/index.html
+++ b/JavaScript Algorithms and Data Structures/Build a Palindrome Checker/index.html
@@ -7,11 +7,11 @@
     <title>
       Palindrome Checker
     </title>
-    <link role="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,800;1,400&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,800;1,400&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div id="content-container">
@@ -32,6 +32,5 @@
         <p id="footer-text">Author: Momcilo Savic</p>
       </footer>
     </div>
-    <script src="script.js" defer></script>
   </body>
 </html>
